--- a/package.json
+++ b/package.json
@@ -13,24 +13,26 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run serve"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.14.0",
-    "@popperjs/core": "2.5.1",
-    "@tailwindcss/custom-forms": "0.2.1",
-    "chart.js": "2.9.3",
-    "core-js": "3.6.5",
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@popperjs/core": "2.9.1",
+    "@tailwindcss/forms": "0.2.1",
+    "chart.js": "2.9.4",
+    "core-js": "3.9.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "tailwindcss": "1.8.10",
-    "vue": "2.6.12",
-    "vue-router": "3.4.3"
+    "tailwindcss": "2.0.4",
+    "vue": "3.0.7",
+    "vue-router": "3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.5.6",
-    "@vue/cli-plugin-eslint": "4.5.6",
-    "@vue/cli-service": "4.5.6",
+    "@vue/cli-plugin-babel": "4.5.12",
+    "@vue/cli-plugin-eslint": "4.5.12",
+    "@vue/cli-service": "4.5.12",
+    "autoprefixer": "10.2.5",
     "babel-eslint": "10.1.0",
     "eslint": "6.8.0",
-    "eslint-plugin-vue": "6.2.2",
+    "eslint-plugin-vue": "7.7.0",
+    "postcss": "8.2.8",
     "vue-template-compiler": "2.6.12"
   },
   "eslintConfig": {
