--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "homepage": "https://demos.creative-tim.com/vue-notus/",
   "version": "1.1.0",
   "description": "Vue Notus - A free Tailwind CSS and VueJS UI Kit and Admin by Creative Tim.",
-  "repository": "https://github.com/creativetimofficial/vue-notus",
+  "repository": "https://github.com/eltorio/vue-notus",
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -21,6 +21,7 @@
     "core-js": "3.9.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
+    "qrcode.vue": "^3.3.3",
     "tailwindcss": "2.0.4",
     "vue": "3.0.7",
     "vue-router": "4.0.5"
