--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "qrcode.vue": "^3.3.3",
     "tailwindcss": "2.0.4",
     "vue": "3.2.27",
-    "vue-router": "4.0.5"
+    "vue-router": "4.0.5",
+    "vue3-openlayers": "^0.1.55"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
