--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "homepage": "https://demos.creative-tim.com/vue-notus/",
   "version": "1.1.0",
   "description": "Vue Notus - A free Tailwind CSS and VueJS UI Kit and Admin by Creative Tim.",
-  "repository": "https://github.com/eltorio/vue-notus",
+  "repository": "https://github.com/eltorio/vue-highcanfly",
   "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
