--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "devDependencies": {
     "@babel/core": "7.13.10",
     "@babel/eslint-parser": "7.13.10",
-    "@vue/cli-plugin-babel": "5.0.0-alpha.7",
-    "@vue/cli-plugin-eslint": "5.0.0-alpha.7",
-    "@vue/cli-service": "5.0.0-alpha.7",
+    "@vue/cli-plugin-babel": "5.0.0-rc.2",
+    "@vue/cli-plugin-eslint": "5.0.0-rc.2",
+    "@vue/cli-service": "5.0.0-rc.2",
     "autoprefixer": "10.2.5",
     "eslint": "7.22.0",
     "eslint-plugin-vue": "7.7.0",
