--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.4",
     "@popperjs/core": "2.11.2",
-    "@tailwindcss/forms": "0.2.1",
+    "@tailwindcss/forms": "0.4.0",
     "@vue/compiler-sfc": "3.2.28",
     "chart.js": "2.9.4",
     "core-js": "3.9.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "qrcode.vue": "^3.3.3",
-    "tailwindcss": "3.0.15",
     "vue": "3.2.27",
     "vue-router": "4.0.12",
     "vue3-openlayers": "^0.1.56"
@@ -36,7 +35,8 @@
     "autoprefixer": "10.4.2",
     "eslint": "7.22.0",
     "eslint-plugin-vue": "7.7.0",
-    "postcss": "8.4.5",
+    "postcss": "^8.4.5",
+    "tailwindcss": "3.0.15",
     "vue-template-compiler": "2.6.12"
   },
   "eslintConfig": {
@@ -55,6 +55,7 @@
   },
   "postcss": {
     "plugins": {
+      "tailwindcss": {},
       "autoprefixer": {}
     }
   },
