--- a/package.json
+++ b/package.json
@@ -16,33 +16,34 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.4",
     "@popperjs/core": "2.11.2",
-    "@tailwindcss/forms": "0.4.0",
-    "@vue/compiler-sfc": "3.2.29",
-    "chart.js": "2.9.4",
-    "core-js": "3.9.1",
+    "@sanity/client": "^2.23.2",
+    "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/forms": "^0.4.0",
+    "@vue/compiler-sfc": "^3.2.29",
+    "chart.js": "^2.9.4",
+    "core-js": "^3.20.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "qrcode.vue": "^3.3.3",
-    "vue": "3.2.27",
-    "vue-router": "4.0.12",
+    "sanity-blocks-vue-component": "^1.0.1",
+    "vue": "^3.2.27",
+    "vue-router": "^4.0.12",
     "vue3-openlayers": "^0.1.57",
-    "wrangler": "^0.0.12",
-    "@sanity/client":"^2.23.2",
-    "sanity-blocks-vue-component":"^1.0.1",
-    "@sanity/image-url":"^1.0.1"
+    "walkjs": "^3.2.4",
+    "wrangler": "^0.0.12"
   },
   "devDependencies": {
-    "@babel/core": "7.16.12",
-    "@babel/eslint-parser": "7.16.5",
-    "@vue/cli-plugin-babel": "5.0.0-rc.2",
-    "@vue/cli-plugin-eslint": "5.0.0-rc.2",
-    "@vue/cli-service": "5.0.0-rc.2",
-    "autoprefixer": "10.4.2",
-    "eslint": "7.22.0",
-    "eslint-plugin-vue": "7.7.0",
+    "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "^7.16.5",
+    "@vue/cli-plugin-babel": "^5.0.0-rc.2",
+    "@vue/cli-plugin-eslint": "^5.0.0-rc.2",
+    "@vue/cli-service": "^5.0.0-rc.2",
+    "autoprefixer": "^10.4.2",
+    "eslint": "^7.22.0",
+    "eslint-plugin-vue": "^7.7.0",
     "postcss": "^8.4.5",
-    "tailwindcss": "3.0.16",
-    "vue-template-compiler": "2.6.12"
+    "tailwindcss": "^3.0.16",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
