makes project conform to Vue3 coding standards

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-HighCanFly",
-  "homepage": "https://demos.creative-tim.com/vue-notus/",
+  "name": "vue-highcanfly",
+  "homepage": "https://www.highcanfly.club/",
   "version": "1.1.0",
   "description": "HighCanFly website with Vue3/TailwindCSS",
   "repository": "https://github.com/eltorio/vue-highcanfly",
