--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@sanity/image-url": "^1.0.1",
     "@tailwindcss/forms": "^0.4.0",
     "@vue/compiler-sfc": "^3.2.29",
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.7.0",
     "core-js": "^3.21.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
@@ -28,22 +28,21 @@
     "sanity-blocks-vue-component": "^1.0.1",
     "vue": "^3.2.27",
     "vue-router": "^4.0.12",
-    "vue3-openlayers": "^0.1.57",
+    "vue3-openlayers": "^0.1.58",
     "walkjs": "^3.2.4",
     "wrangler": "^0.0.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/eslint-parser": "^7.16.5",
+    "@babel/core": "^7.17.0",
+    "@babel/eslint-parser": "^7.17.0",
     "@vue/cli-plugin-babel": "^5.0.0-rc.2",
     "@vue/cli-plugin-eslint": "^5.0.0-rc.2",
     "@vue/cli-service": "^5.0.0-rc.2",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.8.0",
-    "eslint-plugin-vue": "^8.4.0",
+    "eslint-plugin-vue": "^8.4.1",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.16",
-    "vue-template-compiler": "^2.6.14"
+    "tailwindcss": "^3.0.18"
   },
   "eslintConfig": {
     "root": true,
