--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "vue-router": "^4.0.12",
     "vue3-openlayers": "^0.1.58",
     "walkjs": "^3.2.4",
-    "wrangler": "^0.0.15"
+    "wrangler": "^0.0.15",
+    "@headlessui/vue": "^1.4.3",
+    "@heroicons/vue": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
