bug: does not build on CLouflare Pages

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "vue-cli-service serve",
     "wrangler": "npx wrangler pages dev -- yarn serve",
     "build": "vue-cli-service build && gulp licenses",
+    "build-cf": "git fetch --recurse-submodules && vue-cli-service build && gulp licenses",
     "lint": "vue-cli-service lint",
     "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run serve"
