--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "autoprefixer": "^10.4.2",
     "eslint": "^8.8.0",
     "eslint-plugin-vue": "^8.4.1",
+    "gitlog": "^4.0.4",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.18",
-    "gitlog": "^4.0.4"
+    "tailwindcss": "^3.0.18"
   },
   "eslintConfig": {
     "root": true,
