--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue-highcanfly",
+  "sideEffects": ["src/assets/styles/index.css"],
   "homepage": "https://www.highcanfly.club/",
   "version": "1.1.0",
   "description": "HighCanFly website with Vue3/TailwindCSS",
@@ -9,13 +10,14 @@
     "serve": "vue-cli-service serve",
     "wrangler": "npx wrangler pages dev -- yarn serve",
     "build": "vue-cli-service build && gulp licenses",
-    "build-cf": "git fetch --recurse-submodules && vue-cli-service build && gulp licenses",
+    "build-cf": "git fetch --recurse-submodules && vue-cli-service build --report && gulp licenses",
+    "build-report": "vue-cli-service build --report",
     "lint": "vue-cli-service lint",
     "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run serve"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.15.4",
+    "@fortawesome/fontawesome-free": "~5.15.4",
     "@headlessui/vue": "^1.4.3",
     "@heroicons/vue": "^1.0.5",
     "@popperjs/core": "2.11.2",
@@ -46,7 +48,8 @@
     "eslint-plugin-vue": "^8.4.1",
     "gitlog": "^4.0.4",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.18"
+    "tailwindcss": "^3.0.18",
+    "webpack": "~5.68.0"
   },
   "eslintConfig": {
     "root": true,
