--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "vue-router": "^4.0.12",
     "vue3-openlayers": "^0.1.59",
     "walkjs": "^3.2.4",
-    "wrangler": "^0.0.16"
+    "wrangler": "^0.0.16",
+    "CFDTrackjoiner": "file:./CFDTrackjoiner"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
