--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "vue3-openlayers": "^0.1.59",
     "walkjs": "^3.2.4",
     "wrangler": "^0.0.16",
-    "CFDTrackjoiner": "file:./CFDTrackjoiner"
+    "CFDTrackJoiner": "file:./CFDTrackJoiner"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
