--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "vue-router": "^4.0.12",
     "vue3-openlayers": "^0.1.61",
     "walkjs": "^3.2.4",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "element-plus":"~2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
