--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "qrcode.vue": "^3.3.3",
     "sanity-blocks-vue-component": "^1.0.1",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.13",
+    "vue-router": "^4.0.14",
     "vue3-openlayers": "^0.1.63",
     "walkjs": "^3.2.4",
     "crypto-js": "^4.1.1",
-    "element-plus":"~2.0.4",
-    "vue-instantsearch": "~4.3.3"
+    "element-plus":"~2.0.6",
+    "vue-instantsearch": "~4.3.3",
+    "vue-agile":"^2.0.0",
+    "basiclightbox":"^5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -52,7 +54,7 @@
     "eslint": "^8.10.0",
     "eslint-plugin-vue": "^8.5.0",
     "gitlog": "^4.0.4",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23",
     "@tailwindcss/typography":"^0.5.2",
     "@tailwindcss/forms": "^0.5.0",
