--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run serve"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.20.1",
     "@fortawesome/fontawesome-free": "~6.0.0",
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
@@ -28,39 +29,39 @@
     "@sanity/image-url": "^1.0.1",
     "@vue/compiler-sfc": "^3.2.31",
     "CFDTrackJoiner": "file:./CFDTrackJoiner",
+    "basiclightbox": "^5.0.4",
     "chart.js": "^3.7.1",
     "core-js": "^3.21.1",
+    "crypto-js": "^4.1.1",
+    "element-plus": "~2.1.2",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "qrcode.vue": "^3.3.3",
     "sanity-blocks-vue-component": "^1.0.1",
     "vue": "^3.2.31",
+    "vue-agile": "^2.0.0",
+    "vue-instantsearch": "~4.3.3",
     "vue-router": "^4.0.14",
     "vue3-openlayers": "^0.1.63",
-    "walkjs": "^3.2.4",
-    "crypto-js": "^4.1.1",
-    "element-plus":"~2.0.6",
-    "vue-instantsearch": "~4.3.3",
-    "vue-agile":"^2.0.0",
-    "basiclightbox":"^5.0.4"
+    "walkjs": "^3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
     "@babel/eslint-parser": "^7.17.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "@vue/cli-plugin-babel": "^5.0.1",
     "@vue/cli-plugin-eslint": "^5.0.1",
     "@vue/cli-service": "^5.0.1",
     "autoprefixer": "^10.4.2",
-    "eslint": "^8.10.0",
+    "eslint": "^8.11.0",
     "eslint-plugin-vue": "^8.5.0",
     "gitlog": "^4.0.4",
+    "node-fetch": "~2.6.7",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23",
-    "@tailwindcss/typography":"^0.5.2",
-    "@tailwindcss/forms": "^0.5.0",
     "webpack": "~5.70.0",
-    "wrangler": "0.0.16",
-    "node-fetch": "~2.6.7"
+    "wrangler": "0.0.19"
   },
   "eslintConfig": {
     "root": true,
