--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build-cf": "git fetch --recurse-submodules && vue-cli-service build --report && gulp licenses",
     "build-report": "vue-cli-service build --report",
     "lint": "vue-cli-service lint",
-    "get-meteo-icons": "node get-meteo-icons.js",
+    "get-meteo-icons": "node get-meteo-icons.mjs",
     "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run serve"
   },
@@ -57,7 +57,7 @@
     "eslint": "^8.11.0",
     "eslint-plugin-vue": "^8.5.0",
     "gitlog": "^4.0.4",
-    "node-fetch": "~2.6.7",
+    "node-fetch": "^3.2.3",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23",
     "webpack": "~5.70.0",
