--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "vue-instantsearch": "~4.3.3",
     "vue-router": "^4.0.14",
     "vue3-openlayers": "^0.1.63",
-    "walkjs": "^3.2.4"
+    "walkjs": "^3.2.4",
+    "@cloudinary/url-gen":"^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
