--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fontmin-webpack"]
 	path = fontmin-webpack
 	url = git@github.com:eltorio/fontmin-webpack.git
+[submodule "mangle-css-class-webpack-plugin"]
+	path = mangle-css-class-webpack-plugin
+	url = git@github.com:eltorio/mangle-css-class-webpack-plugin.git
