--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serve": "vue-cli-service serve",
     "wrangler": "npx wrangler pages dev -- yarn serve",
     "build": "vue-cli-service build && gulp licenses",
+    "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
     "build-cf": "git fetch --recurse-submodules && vue-cli-service build --report && gulp licenses",
     "build-report": "vue-cli-service build --report",
     "lint": "vue-cli-service lint",
@@ -60,6 +61,7 @@
     "fontmin-webpack": "file:fontmin-webpack",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.0",
+    "mangle-css-class-webpack-plugin": "file:mangle-css-class-webpack-plugin",
     "node-fetch": "^3.2.3",
     "postcss": "^8.4.12",
     "purgecss-webpack-plugin": "^4.1.3",
