--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@fortawesome/fontawesome-free": "~6.1.1",
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
-    "@popperjs/core": "2.11.4",
+    "@popperjs/core": "2.11.5",
     "@sanity/client": "^3.2.2",
     "@sanity/image-url": "^1.0.1",
     "@vue/compiler-sfc": "^3.2.31",
@@ -66,8 +66,8 @@
     "postcss": "^8.4.12",
     "purgecss-webpack-plugin": "^4.1.3",
     "tailwindcss": "^3.0.23",
-    "webpack": "~5.70.0",
-    "wrangler": "0.0.24"
+    "webpack": "~5.71.0",
+    "wrangler": "^0.0.24"
   },
   "eslintConfig": {
     "root": true,
