--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run serve"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.20.1",
+    "@auth0/auth0-spa-js": "^1.21.0",
     "@cloudinary/url-gen": "^1.7.0",
     "@fortawesome/fontawesome-free": "~6.1.1",
     "@headlessui/vue": "^1.5.0",
     "@heroicons/vue": "^1.0.6",
     "@popperjs/core": "2.11.5",
-    "@sanity/client": "^3.2.2",
+    "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
     "@vue/compiler-sfc": "^3.2.31",
     "basiclightbox": "^5.0.4",
-    "CFDTrackJoiner": "file:./CFDTrackJoiner",
+    "CFDTrackJoiner": "file:CFDTrackJoiner",
     "chart.js": "^3.7.1",
-    "core-js": "^3.21.1",
+    "core-js": "^3.22.0",
     "crypto-js": "^4.1.1",
     "element-plus": "~2.1.4",
     "gulp": "4.0.2",
@@ -65,7 +65,7 @@
     "node-fetch": "^3.2.3",
     "postcss": "^8.4.12",
     "purgecss-webpack-plugin": "^4.1.3",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "webpack": "~5.72.0",
     "wrangler": "^0.0.26"
   },
