--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@auth0/auth0-spa-js": "^1.21.0",
     "@cloudinary/url-gen": "^1.7.0",
     "@fortawesome/fontawesome-free": "~6.1.1",
-    "@headlessui/vue": "^1.5.0",
+    "@headlessui/vue": "^1.6.0",
     "@heroicons/vue": "^1.0.6",
     "@popperjs/core": "2.11.5",
     "@sanity/client": "^3.3.0",
@@ -35,12 +35,12 @@
     "chart.js": "^3.7.1",
     "core-js": "^3.22.0",
     "crypto-js": "^4.1.1",
-    "element-plus": "~2.1.4",
+    "element-plus": "~2.1.11",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "qrcode.vue": "^3.3.3",
     "sanity-blocks-vue-component": "^1.0.1",
-    "vue": "^3.2.31",
+    "vue": "^3.2.33",
     "vue-agile": "^2.0.0",
     "vue-instantsearch": "~4.3.3",
     "vue-router": "^4.0.14",
@@ -48,16 +48,17 @@
     "walkjs": "^3.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/eslint-parser": "^7.17.0",
+    "@cloudflare/workers-types": "^3.7.1",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-plugin-typescript": "^5.0.4",
     "@vue/cli-service": "^5.0.4",
-    "autoprefixer": "^10.4.4",
-    "eslint": "^8.13.0",
-    "eslint-plugin-vue": "^8.6.0",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "autoprefixer": "^10.4.5",
     "fontmin-webpack": "file:fontmin-webpack",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.0",
@@ -67,7 +68,7 @@
     "purgecss-webpack-plugin": "^4.1.3",
     "tailwindcss": "^3.0.24",
     "webpack": "~5.72.0",
-    "wrangler": "^0.0.26"
+    "wrangler": "^0.0.27"
   },
   "eslintConfig": {
     "root": true,
@@ -75,13 +76,14 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
+      "plugin:vue/vue3-essential",
+      "eslint:recommended",
+      "@vue/typescript/recommended"
     ],
-    "rules": {},
     "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    }
+      "ecmaVersion": 2020
+    },
+    "rules": {}
   },
   "postcss": {
     "plugins": {
@@ -91,6 +93,8 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
-  ]
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "keywords": []
 }
