--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "wrangler": "npx wrangler pages dev -- yarn serve",
-    "build": "vue-cli-service build && gulp licenses",
+    "build": "node jwks.js && node get-meteo-icons.mjs && vue-cli-service build && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
-    "build-cf": "git fetch --recurse-submodules && node jwks.js && vue-cli-service build --report && gulp licenses",
+    "build-cf": "git fetch --recurse-submodules && node jwks.js && node get-meteo-icons.mjs && vue-cli-service build --report && gulp licenses",
     "build-report": "vue-cli-service build --report",
     "lint": "vue-cli-service lint",
     "get-meteo-icons": "node get-meteo-icons.mjs",
