move all website config in ./src/config

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ sanity-conf.json
 auth0-conf.json
 _sensitive_datas/_sensitive_datas.tar.xz
 jwks.json
+cloudinary-conf.json
+.vscode/settings.json
