--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "wrangler": "npx wrangler pages dev -- yarn serve",
-    "build": "node jwks.js && node get-meteo-icons.mjs && vue-cli-service build && gulp licenses",
+    "build": "node jwks.js && vue-cli-service build && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
-    "build-cf": "git fetch --recurse-submodules && node jwks.js && node get-meteo-icons.mjs && vue-cli-service build --report && gulp licenses",
+    "build-cf": "git fetch --recurse-submodules && node jwks.js && vue-cli-service build --report && gulp licenses",
     "build-report": "vue-cli-service build --report",
     "lint": "vue-cli-service lint",
     "get-meteo-icons": "node get-meteo-icons.mjs",
@@ -51,6 +51,7 @@
     "@cloudflare/workers-types": "^3.8.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/node": "^17.0.30",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "@vue/cli-plugin-babel": "^5.0.4",
