--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
             "dom"
         ],
         "types": [
-            "@cloudflare/workers-types"
+            "@cloudflare/workers-types",
+            "node"
         ],
         "paths": {
             "~/*": [
