--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "baseUrl": "./",
         "target": "ES2020",
+        "sourceMap": true,
         "module": "CommonJS",
         "lib": [
             "ES2020",
