--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,45 @@
 {
     "compilerOptions": {
-        "baseUrl": "./",
-        "target": "ES2020",
-        "sourceMap": true,
-        "module": "CommonJS",
-        "lib": [
-            "ES2020",
-            "dom"
-        ],
-        "types": [
-            "@cloudflare/workers-types",
-            "node"
-        ],
-        "paths": {
-            "~/*": [
-                "src/app_shared/*",
-            ],
-            "@/*": [
-                "src/*"
-            ]
-        },
-        "resolveJsonModule": true,
-        "esModuleInterop": true
+      "target": "ES2020",
+      "module": "CommonJS",
+      "strict": false,
+      "jsx": "preserve",
+      "moduleResolution": "node",
+      "skipLibCheck": true,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "forceConsistentCasingInFileNames": true,
+      "useDefineForClassFields": true,
+      "sourceMap": true,
+      "resolveJsonModule": true,
+      "noErrorTruncation":false,
+      "baseUrl": ".",
+      "types": [
+        "webpack-env",
+        "@cloudflare/workers-types",
+        "node"
+      ],
+      "paths": {
+        "@/*": [
+          "src/*"
+        ]
+      },
+      "lib": [
+        "ES2020",
+        "dom",
+        "dom.iterable",
+        "scripthost"
+      ]
     },
     "include": [
-        "src/**/*.ts",
-        "functions/**/*.ts"
+      "src/**/*.ts",
+      "src/**/*.tsx",
+      "src/**/*.vue",
+      "tests/**/*.ts",
+      "tests/**/*.tsx"
+    ],
+    "exclude": [
+      "node_modules"
     ]
-}
+  }
+  
