--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,45 +1,50 @@
 {
-    "compilerOptions": {
-      "target": "ES2020",
-      "module": "CommonJS",
-      "strict": false,
-      "jsx": "preserve",
-      "moduleResolution": "node",
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "forceConsistentCasingInFileNames": true,
-      "useDefineForClassFields": true,
-      "sourceMap": true,
-      "resolveJsonModule": true,
-      "noErrorTruncation":false,
-      "baseUrl": ".",
-      "types": [
-        "webpack-env",
-        "@cloudflare/workers-types",
-        "node"
-      ],
-      "paths": {
-        "@/*": [
-          "src/*"
-        ]
-      },
-      "lib": [
-        "ES2020",
-        "dom",
-        "dom.iterable",
-        "scripthost"
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "strict": false,
+    "jsx": "preserve",
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "useDefineForClassFields": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "noErrorTruncation": false,
+    "baseUrl": ".",
+    "types": [
+      "webpack-env",
+      "@cloudflare/workers-types",
+      "node",
+      "forecast-collection",
+      "geojson"
+    ],
+    "typeRoots": [
+      "./src/types",
+      "./node_modules/@types"
+    ],
+    "paths": {
+      "@/*": [
+        "src/*"
       ]
     },
-    "include": [
-      "src/**/*.ts",
-      "src/**/*.tsx",
-      "src/**/*.vue",
-      "tests/**/*.ts",
-      "tests/**/*.tsx"
-    ],
-    "exclude": [
-      "node_modules"
+    "lib": [
+      "ES2020",
+      "dom",
+      "dom.iterable",
+      "scripthost"
     ]
-  }
-  
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
+}
