--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "jose": "^4.8.1",
+    "leaflet": "^1.8.0",
     "qrcode.vue": "^3.3.3",
     "sanity-blocks-vue-component": "^1.0.1",
     "vue": "^3.2.33",
@@ -51,6 +52,7 @@
     "@cloudflare/workers-types": "^3.10.0",
     "@tailwindcss/forms": "^0.5.1",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/leaflet": "^1.7.10",
     "@types/node": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -61,6 +63,7 @@
     "@vue/eslint-config-typescript": "^10.0.0",
     "autoprefixer": "^10.4.7",
     "fontmin-webpack": "file:fontmin-webpack",
+    "geojson": "^0.5.0",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.0",
     "json-loader": "^0.5.7",
