add cesium token

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ cloudinary-conf.json
 src/config/node-version.json
 src/config/places.json
 src/config/mapbox-conf.json
+src/config/cesium-conf.json
