--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sanity/image-url": "^1.0.1",
     "@vue/compiler-sfc": "^3.2.36",
     "basiclightbox": "^5.0.4",
+    "cesium": "^1.93.0",
     "CFDTrackJoiner": "file:CFDTrackJoiner",
     "chart.js": "^3.8.0",
     "core-js": "^3.22.7",
@@ -39,6 +40,7 @@
     "gulp-append-prepend": "1.0.9",
     "jose": "^4.8.1",
     "leaflet": "^1.8.0",
+    "path-browserify": "^1.0.1",
     "qrcode.vue": "^3.3.3",
     "sanity-blocks-vue-component": "^1.0.1",
     "vue": "^3.2.36",
@@ -62,6 +64,7 @@
     "@vue/cli-service": "^5.0.4",
     "@vue/eslint-config-typescript": "^10.0.0",
     "autoprefixer": "^10.4.7",
+    "copy-webpack-plugin": "^11.0.0",
     "fontmin-webpack": "file:fontmin-webpack",
     "geojson": "^0.5.0",
     "gitlog": "^4.0.4",
