--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "repository": "https://github.com/eltorio/vue-highcanfly",
   "license": "MIT",
   "scripts": {
+    "update": "npx npm-check-updates -u",
     "serve": "vue-cli-service serve",
     "wrangler": "npx wrangler pages dev -- yarn serve",
     "build": "node jwks.js && vue-cli-service build && gulp licenses",
@@ -30,10 +31,10 @@
     "@sanity/image-url": "^1.0.1",
     "@vue/compiler-sfc": "^3.2.36",
     "basiclightbox": "^5.0.4",
-    "cesium": "^1.93.0",
+    "cesium": "^1.94.0",
     "CFDTrackJoiner": "file:CFDTrackJoiner",
     "chart.js": "^3.8.0",
-    "core-js": "^3.22.7",
+    "core-js": "^3.22.8",
     "crypto-js": "^4.1.1",
     "element-plus": "~2.2.2",
     "gulp": "4.0.2",
@@ -71,7 +72,8 @@
     "glob-all": "^3.3.0",
     "json-loader": "^0.5.7",
     "mangle-css-class-webpack-plugin": "file:mangle-css-class-webpack-plugin",
-    "node-fetch": "^3.2.4",
+    "node-fetch": "^3.2.5",
+    "npm-check-updates": "^13.0.4",
     "postcss": "^8.4.14",
     "purgecss-webpack-plugin": "^4.1.3",
     "tailwindcss": "^3.0.24",
