--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "update": "npx npm-check-updates -u",
     "serve": "vue-cli-service serve",
-    "vercel-build": "npm version && cp -af CFDTrackJoiner/src/views/TrackJoinerView.vue src/components/ && cp -af CFDTrackJoiner/src/views/trackJoinerHelp.vue src/components/ && npm run build",
+    "vercel-build": "npm version && git fetch --recurse-submodules && node jwks.js && cp -af CFDTrackJoiner/src/views/TrackJoinerView.vue src/components/ && cp -af CFDTrackJoiner/src/views/trackJoinerHelp.vue src/components/ && npm run build",
     "wrangler": "npx wrangler pages dev -- yarn serve",
     "build": "node jwks.js && vue-cli-service build && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
