--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@vue/compiler-sfc": "^3.2.37",
     "basiclightbox": "^5.0.4",
     "cesium": "^1.94.3",
-    "CFDTrackJoiner": "file:CFDTrackJoiner",
+    "CFDTrackJoiner": "github:eltorio/cfdtrackjoiner",
     "chart.js": "^3.8.0",
     "core-js": "^3.23.1",
     "crypto-js": "^4.1.1",
@@ -50,7 +50,11 @@
     "vue-instantsearch": "~4.3.3",
     "vue-router": "^4.0.16",
     "vue3-openlayers": "^0.1.68",
-    "walkjs": "^3.2.4"
+    "walkjs": "^3.2.4",
+    "dexie": "^4.0.0-alpha.3",
+    "fit-parser": "github:eltorio/fit-parser",
+    "gpxparser": "^3.0.8",
+    "igc-parser": "github:eltorio/igc-parser"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.13.0",
@@ -69,12 +73,14 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.18.0",
     "eslint-plugin-vue": "^9.1.1",
-    "fontmin-webpack": "file:fontmin-webpack",
+    "fontmin-webpack": "github:eltorio/fontmin-webpack",
     "geojson": "^0.5.0",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.0",
     "json-loader": "^0.5.7",
-    "mangle-css-class-webpack-plugin": "file:mangle-css-class-webpack-plugin",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
+    "mangle-css-class-webpack-plugin": "github:eltorio/mangle-css-class-webpack-plugin",
     "node-fetch": "^3.2.6",
     "npm-check-updates": "^14.0.1",
     "postcss": "^8.4.14",
