--- a/package.json
+++ b/package.json
@@ -33,13 +33,17 @@
     "@vue/compiler-sfc": "^3.2.37",
     "basiclightbox": "^5.0.4",
     "cesium": "^1.94.3",
-    "CFDTrackJoiner": "github:eltorio/cfdtrackjoiner",
+    "CFDTrackJoiner": "git+https://github.com/eltorio/cfdtrackjoiner.git",
     "chart.js": "^3.8.0",
     "core-js": "^3.23.1",
     "crypto-js": "^4.1.1",
+    "dexie": "^4.0.0-alpha.3",
     "element-plus": "~2.2.6",
+    "fit-parser": "github:eltorio/fit-parser",
+    "gpxparser": "^3.0.8",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
+    "igc-parser": "git+https://github.com/eltorio/igc-parser.git",
     "jose": "^4.8.1",
     "leaflet": "^1.8.0",
     "path-browserify": "^1.0.1",
@@ -50,11 +54,7 @@
     "vue-instantsearch": "~4.3.3",
     "vue-router": "^4.0.16",
     "vue3-openlayers": "^0.1.68",
-    "walkjs": "^3.2.4",
-    "dexie": "^4.0.0-alpha.3",
-    "fit-parser": "github:eltorio/fit-parser",
-    "gpxparser": "^3.0.8",
-    "igc-parser": "github:eltorio/igc-parser"
+    "walkjs": "^3.2.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.13.0",
@@ -73,18 +73,18 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.18.0",
     "eslint-plugin-vue": "^9.1.1",
-    "fontmin-webpack": "github:eltorio/fontmin-webpack",
+    "fontmin-webpack": "git+https://github.com/eltorio/fontmin-webpack.git",
     "geojson": "^0.5.0",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.0",
     "json-loader": "^0.5.7",
-    "sass": "^1.52.3",
-    "sass-loader": "^13.0.0",
-    "mangle-css-class-webpack-plugin": "github:eltorio/mangle-css-class-webpack-plugin",
+    "mangle-css-class-webpack-plugin": "git+https://github.com/eltorio/mangle-css-class-webpack-plugin.git",
     "node-fetch": "^3.2.6",
     "npm-check-updates": "^14.0.1",
     "postcss": "^8.4.14",
     "purgecss-webpack-plugin": "^4.1.3",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
     "tailwindcss": "^3.1.3",
     "typescript": "^4.7.4",
     "webpack": "~5.73.0",
