Remove old links

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@vue/compiler-sfc": "^3.2.37",
     "basiclightbox": "^5.0.4",
     "cesium": "^1.94.3",
-    "CFDTrackJoiner": "git+https://github.com/eltorio/cfdtrackjoiner.git",
+    "CFDTrackJoiner": "github:eltorio/cfdtrackjoiner",
     "chart.js": "^3.8.0",
     "core-js": "^3.23.1",
     "crypto-js": "^4.1.1",
@@ -43,7 +43,7 @@
     "gpxparser": "^3.0.8",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "igc-parser": "git+https://github.com/eltorio/igc-parser.git",
+    "igc-parser": "github:eltorio/igc-parser",
     "jose": "^4.8.1",
     "leaflet": "^1.8.0",
     "path-browserify": "^1.0.1",
@@ -73,12 +73,12 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.18.0",
     "eslint-plugin-vue": "^9.1.1",
-    "fontmin-webpack": "git+https://github.com/eltorio/fontmin-webpack.git",
+    "fontmin-webpack": "github:eltorio/fontmin-webpack",
     "geojson": "^0.5.0",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.0",
     "json-loader": "^0.5.7",
-    "mangle-css-class-webpack-plugin": "git+https://github.com/eltorio/mangle-css-class-webpack-plugin.git",
+    "mangle-css-class-webpack-plugin": "github:eltorio/mangle-css-class-webpack-plugin",
     "node-fetch": "^3.2.6",
     "npm-check-updates": "^14.0.1",
     "postcss": "^8.4.14",
