--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ src/config/node-version.json
 src/config/places.json
 src/config/mapbox-conf.json
 src/config/cesium-conf.json
+mongodb-places.json
