--- a/package.json
+++ b/package.json
@@ -5,117 +5,80 @@
   ],
   "homepage": "https://www.highcanfly.club/",
   "version": "1.1.0",
+  "type": "module",
   "description": "HighCanFly website with Vue3/TailwindCSS",
   "repository": "https://github.com/eltorio/vue-highcanfly",
   "license": "MIT",
   "scripts": {
+    "fontawesomeminify": "node --loader ts-node/esm ./fontawesome/fontawesomeminify.ts",
+    "prepare-env": "node --loader ts-node/esm ./prepare-env.ts",
     "update": "npx npm-check-updates -u",
-    "serve": "vue-cli-service serve",
+    "serve": "vite",
     "wrangler": "npx wrangler pages dev -- yarn serve",
-    "build": "node jwks.js && vue-cli-service build && gulp licenses",
+    "build": "node jwks.js && npx vite build && npm run fontawesomeminify && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
-    "build-cf": "node jwks.js && vue-cli-service build --report && gulp licenses",
-    "build-report": "vue-cli-service build --report",
-    "lint": "vue-cli-service lint",
-    "get-meteo-icons": "node get-meteo-icons.mjs",
-    "build:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run serve"
+    "build-cf": "node jwks.js && npx vite build  && gulp licenses",
+    "get-meteo-icons": "node get-meteo-icons.mjs"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.22.3",
     "@cloudinary/url-gen": "^1.8.6",
-    "@headlessui/vue": "^1.6.7",
-    "@heroicons/vue": "^2.0.8",
+    "@headlessui/vue": "^1.7.0",
+    "@heroicons/vue": "^2.0.10",
     "@popperjs/core": "2.11.6",
-    "@sanity/client": "^3.3.5",
+    "@sanity/client": "^3.3.6",
     "@sanity/image-url": "^1.0.1",
-    "@vue/compiler-sfc": "^3.2.37",
     "basiclightbox": "^5.0.4",
-    "cesium": "^1.96.0",
+    "cesium": "^1.97.0",
     "cfdtrackjoiner": "github:eltorio/cfdtrackjoiner",
     "chart.js": "^3.9.1",
     "core-js": "^3.25.0",
     "crypto-js": "^4.1.1",
     "dexie": "^4.0.0-alpha.4",
-    "element-plus": "~2.2.15",
+    "element-plus": "~2.2.16",
     "fit-parser": "github:eltorio/fit-parser",
     "gpxparser": "^3.0.8",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "igc-parser": "github:eltorio/igc-parser",
-    "jose": "^4.9.0",
+    "jose": "^4.9.2",
     "leaflet": "^1.8.0",
     "path-browserify": "^1.0.1",
     "qrcode.vue": "^3.3.3",
     "sanity-blocks-vue-component": "^1.0.1",
-    "vue": "^3.2.37",
+    "vue": "^3.2.38",
     "vue-agile": "^2.0.0",
-    "vue-instantsearch": "~4.4.2",
+    "vue-instantsearch": "~4.5.0",
     "vue-router": "^4.1.5",
     "vue3-openlayers": "^0.1.70",
     "walkjs": "^3.2.4"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.14.1",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.4",
+    "@cloudflare/workers-types": "^3.16.0",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.7",
     "@types/leaflet": "^1.7.11",
-    "@types/node": "^18.7.13",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vue/cli-plugin-typescript": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
-    "@vue/eslint-config-typescript": "^11.0.0",
+    "@types/node": "^18.7.15",
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.8",
-    "copy-webpack-plugin": "^11.0.0",
-    "eslint": "^8.23.0",
-    "eslint-plugin-vue": "^9.4.0",
-    "fontmin-webpack": "github:eltorio/fontmin-webpack",
+    "fontmin": "^0.9.9",
     "geojson": "^0.5.0",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.0",
-    "json-loader": "^0.5.7",
-    "mangle-css-class-webpack-plugin": "github:eltorio/mangle-css-class-webpack-plugin",
     "node-fetch": "^3.2.10",
-    "npm-check-updates": "^16.0.6",
+    "npm-check-updates": "^16.1.0",
     "postcss": "^8.4.16",
-    "purgecss-webpack-plugin": "^4.1.3",
-    "sass": "^1.54.5",
+    "postcss-purgefonts": "^1.0.2",
+    "sass": "^1.54.8",
     "sass-loader": "^13.0.2",
     "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.2",
-    "webpack": "~5.74.0",
-    "wrangler": "^2.0.27"
+    "vite": "^3.1.0",
+    "wrangler": "^2.0.29"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended",
-      "@vue/typescript/recommended"
-    ],
-    "parserOptions": {
-      "ecmaVersion": 13
-    },
-    "rules": {}
-  },
-  "postcss": {
-    "plugins": {
-      "tailwindcss": {},
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "last 2 version",
-    " >1%",
-    "not ie <= 99",
-    "not ie_mob <= 99",
-    "not op_mini all"
-  ],
   "keywords": []
 }
