--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "fontawesomeminify": "node --loader ts-node/esm ./fontawesome/fontawesomeminify.ts",
     "prepare-env": "node --loader ts-node/esm ./prepare-env.ts",
     "update": "npx npm-check-updates -u",
-    "serve": "vite",
+    "serve": "vite ",
+    "buildmin": "vite build",
     "wrangler": "npx wrangler pages dev -- yarn serve",
     "build": "node jwks.js && npx vite build && npm run fontawesomeminify && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
@@ -28,6 +29,7 @@
     "@popperjs/core": "2.11.6",
     "@sanity/client": "^3.3.6",
     "@sanity/image-url": "^1.0.1",
+    "@vueuse/core": "^9.2.0",
     "basiclightbox": "^5.0.4",
     "cesium": "^1.97.0",
     "cfdtrackjoiner": "github:eltorio/cfdtrackjoiner",
@@ -35,7 +37,6 @@
     "core-js": "^3.25.0",
     "crypto-js": "^4.1.1",
     "dexie": "^4.0.0-alpha.4",
-    "element-plus": "~2.2.16",
     "fit-parser": "github:eltorio/fit-parser",
     "gpxparser": "^3.0.8",
     "gulp": "4.0.2",
