--- a/.gitignore
+++ b/.gitignore
@@ -38,5 +38,6 @@ src/config/node-version.json
 src/config/places.json
 src/config/mapbox-conf.json
 src/config/cesium-conf.json
+src/config/algolia-conf.json
 mongodb-places.json
 mongodb-places.json
