--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "license": "MIT",
   "scripts": {
     "fontawesomeminify": "node --loader ts-node/esm ./fontawesome/fontawesomeminify.ts",
-    "prepare-env": "node --loader ts-node/esm ./prepare-env.ts",
+    "prepare-env": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts",
     "update": "npx npm-check-updates -u",
-    "serve": "vite ",
+    "serve": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && vite ",
     "buildmin": "vite build",
     "wrangler": "npx wrangler pages dev -- yarn serve",
-    "build": "node --loader ts-node/esm ./prepare-env.ts && node jwks.js && npx vite build && npm run fontawesomeminify && gulp licenses",
+    "build": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && node jwks.js && npx vite build && npm run fontawesomeminify && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
     "build-cf": "npm run prepare-env && node jwks.js && npx vite build  && gulp licenses",
     "get-meteo-icons": "node get-meteo-icons.mjs"
@@ -29,19 +29,16 @@
     "@popperjs/core": "2.11.6",
     "@sanity/client": "^3.3.6",
     "@sanity/image-url": "^1.0.1",
+    "@vuepic/vue-datepicker": "^3.4.8",
     "@vueuse/core": "^9.2.0",
     "basiclightbox": "^5.0.4",
+    "buffer": "^6.0.3",
     "cesium": "^1.97.0",
-    "cfdtrackjoiner": "github:eltorio/cfdtrackjoiner",
     "chart.js": "^3.9.1",
-    "core-js": "^3.25.1",
-    "crypto-js": "^4.1.1",
+    "crypto-es": "^1.2.7",
     "dexie": "^4.0.0-alpha.4",
-    "fit-parser": "github:eltorio/fit-parser",
-    "gpxparser": "^3.0.8",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "igc-parser": "github:eltorio/igc-parser",
     "jose": "^4.9.2",
     "leaflet": "^1.8.0",
     "path-browserify": "^1.0.1",
