Don't incorporate cesium in esm

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "autoprefixer": "^10.4.8",
     "fontmin": "^0.9.9",
+    "fs-extra": "^10.1.0",
     "geojson": "^0.5.0",
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.0",
@@ -70,8 +71,10 @@
     "npm-check-updates": "^16.1.0",
     "postcss": "^8.4.16",
     "postcss-purgefonts": "^1.0.2",
+    "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.54.9",
     "sass-loader": "^13.0.2",
+    "serve-static": "^1.15.0",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2",
