use fontawesome minify vite plugin

--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "repository": "https://github.com/eltorio/vue-highcanfly",
   "license": "MIT",
   "scripts": {
-    "fontawesomeminify": "node --loader ts-node/esm ./fontawesome/fontawesomeminify.ts",
     "prepare-env": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts",
     "update": "npx npm-check-updates -u",
     "serve": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && vite ",
     "buildmin": "vite build",
     "wrangler": "npx wrangler pages dev -- yarn serve",
-    "build": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && node jwks.js && npx vite build && npm run fontawesomeminify && gulp licenses",
+    "build": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && node jwks.js && npx vite build && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
     "build-cf": "npm run prepare-env && node jwks.js && npx vite build  && gulp licenses",
     "get-meteo-icons": "node get-meteo-icons.mjs"
