--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "get-meteo-icons": "node get-meteo-icons.mjs"
   },
   "dependencies": {
-    "@auth0/auth0-spa-js": "^1.22.4",
+    "@auth0/auth0-spa-js": "^1.22.5",
     "@cloudinary/url-gen": "^1.8.6",
     "@headlessui/vue": "^1.7.3",
     "@heroicons/vue": "^2.0.12",
@@ -29,7 +29,7 @@
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@vuepic/vue-datepicker": "^3.5.2",
-    "@vueuse/core": "^9.3.0",
+    "@vueuse/core": "^9.3.1",
     "basiclightbox": "^5.0.4",
     "buffer": "^6.0.3",
     "cesium": "^1.98.1",
@@ -43,7 +43,7 @@
     "path-browserify": "^1.0.1",
     "qrcode.vue": "^3.3.3",
     "sanity-blocks-vue-component": "^1.0.1",
-    "vue": "^3.2.40",
+    "vue": "^3.2.41",
     "vue-agile": "^2.0.0",
     "vue-instantsearch": "~4.6.0",
     "vue-router": "^4.1.5",
@@ -51,15 +51,17 @@
     "walkjs": "^3.2.4"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.16.0",
+    "@cloudflare/workers-types": "^3.17.0",
     "@fullhuman/postcss-purgecss": "^5.0.0",
-    "@sctg/fontminify": "^1.0.1",
+    "@highcanfly-club/fontawesome": "^1.0.0",
+    "@sanity/types": "^2.34.0",
+    "@sctg/fontminify": "^1.0.4",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
-    "@types/leaflet": "^1.8.0",
-    "@types/node": "^18.8.4",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@types/leaflet": "^1.9.0",
+    "@types/node": "^18.11.2",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "@vitejs/plugin-vue": "^3.1.2",
     "autoprefixer": "^10.4.12",
     "fs-extra": "^10.1.0",
@@ -67,18 +69,18 @@
     "gitlog": "^4.0.4",
     "glob-all": "^3.3.0",
     "node-fetch": "^3.2.10",
-    "npm-check-updates": "^16.3.11",
-    "postcss": "^8.4.17",
+    "npm-check-updates": "^16.3.14",
+    "postcss": "^8.4.18",
     "postcss-purgefonts": "^1.0.2",
     "rollup-plugin-external-globals": "^0.6.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "serve-static": "^1.15.0",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
-    "vite": "^3.1.7",
-    "wrangler": "^2.1.11"
+    "vite": "^3.1.8",
+    "wrangler": "^2.1.12"
   },
   "keywords": []
 }
