--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "serve": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && vite ",
     "buildmin": "vite build",
     "wrangler": "npx wrangler pages dev -- yarn serve",
-    "build": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && npx vite build && gulp licenses",
+    "build": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && node jwks.js && npx vite build && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
-    "build-cf": "npm run prepare-env && npx vite build  && gulp licenses",
+    "build-cf": "npm run prepare-env && node jwks.js && npx vite build  && gulp licenses",
     "get-meteo-icons": "node get-meteo-icons.mjs"
   },
   "dependencies": {
@@ -60,6 +60,8 @@
     "@tailwindcss/typography": "^0.5.7",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "autoprefixer": "^10.4.13",
     "fs-extra": "^10.1.0",
