--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "serve": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && vite ",
     "buildmin": "vite build",
     "wrangler": "npx wrangler pages dev -- yarn serve",
+    "wrangler-dev": "npx wrangler pages dev --kv KV_TOKENS --persist --local-protocol https --proxy 5173  -- npx vite ",
     "build": "node --experimental-fetch --loader ts-node/esm ./prepare-env.ts && node jwks.js && npx vite build && gulp licenses",
     "build-prod": "CF_PAGES=\"1\" __DEBUG__=\"0\" vue-cli-service build && gulp licenses",
-    "build-cf": "npm run prepare-env && node jwks.js && npx vite build  && gulp licenses"
+    "build-cf": "npm run prepare-env && node jwks.js && npx vite build  && gulp licenses",
+    "create-ca": "openssl req -x509 -sha256 -days 3562 -nodes -newkey rsa:4096 -subj '/CN=demo.highcanly.club/C=FR/L=Flers-en-Escrebieux' -keyout localhost-rootCA.key -out localhost-rootCA.pem",
+    "create-key": "openssl genrsa 4096 > localhost.key",
+    "create-csr": "openssl req -new -key localhost.key -subj '/CN=localhost/C=FR/L=Flers-en-Escrebieux'  > localhost.csr",
+    "create-crt": "openssl x509 -req -in localhost.csr -out localhost.pem -sha256 -CA localhost-rootCA.pem -days 3600 -CAkey localhost-rootCA.key -CAcreateserial -CAserial localhost-rootCA.srl",
+    "create-cert": "npm run create-ca && npm run create-key && npm run create-csr && npm run create-crt"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^2.0.1",
     "@cloudinary/url-gen": "^1.8.7",
-    "@headlessui/vue": "^1.7.5",
+    "@headlessui/vue": "^1.7.6",
     "@heroicons/vue": "^2.0.13",
     "@highcanfly/meteo": "^1.0.9",
     "@popperjs/core": "2.11.6",
@@ -34,7 +40,7 @@
     "basiclightbox": "^5.0.4",
     "buffer": "^6.0.3",
     "cesium": "^1.100.0",
-    "chart.js": "^4.0.1",
+    "chart.js": "^4.1.0",
     "crypto-es": "^1.2.7",
     "dexie": "^4.0.0-alpha.4",
     "gulp": "4.0.2",
