--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
       "target": "ES2020",
       "module": "CommonJS",
+      "resolveJsonModule":true,
+      "esModuleInterop":true,
       "lib": ["ES2020"],
       "types": ["@cloudflare/workers-types"],
       "typeRoots": [
